--- a/Group_Project_Proposal.ipynb
+++ b/Group_Project_Proposal.ipynb
@@ -5,7 +5,7 @@
    "id": "8223ae03-aec1-4eee-909c-ba41a41e1473",
    "metadata": {},
    "source": [
-    "Title:"
+    "Title: Hello"
    ]
   },
   {
