--- a/Group_Project_Proposal.ipynb
+++ b/Group_Project_Proposal.ipynb
@@ -13,10 +13,12 @@
    "id": "7d430a64-30d7-4219-82d8-b6833975ae05",
    "metadata": {},
    "source": [
-    "Introduction:\n",
+    "## Introduction:\n",
     "- Provide some relevant background information on the topic so that someone unfamiliar with it will be prepared to understand the rest of your proposal\n",
     "- Clearly state the question you will try to answer with your project\n",
-    "- Identify and describe the dataset that will be used to answer the question"
+    "- Identify and describe the dataset that will be used to answer the question\n",
+    "\n",
+    "Our project will answer the predictive question of whether a professional tennis player will win or lose the match. The dataset used to answer the question contains 6867 rows of data from the results of all tennis games for top 500 players from 2017 to 2019. From this dataset, we can determine the tournament’s name, level and date, and also the winners and losers respective age, country, score, serve points, break points, rank, and rank points. By analyzing certain aspects of the data collected from every match, we can find out the relationship between the player’s qualities and the chance of winning. For the age of players, it’s collected at the time the player in the match and marked in decimals. While for the rank, it is the player’s ATP or WTA rank as of the tournament date. However, there are some matches with missing stats, as some of them aren’t recorded, while others were deleted because they didn’t pass the sanity check."
    ]
   },
   {
@@ -24,7 +26,7 @@
    "id": "09086a19-ddba-47c7-8082-31501d4edcbd",
    "metadata": {},
    "source": [
-    "Preliminary exploratory data analysis:\n",
+    "## Preliminary exploratory data analysis:\n",
     "- Demonstrate that the dataset can be read from the web into R \n",
     "- Clean and wrangle your data into a tidy format\n",
     "- Using only training data, summarize the data in at least one table (this is exploratory data analysis). An example of a useful table could be one that reports the number of observations in each class, the means of the predictor variables you plan to use in your analysis and how many rows have missing data.\n",
@@ -926,7 +928,7 @@
    "id": "3b5abd47-1587-4f18-a050-b7ab02b490d8",
    "metadata": {},
    "source": [
-    "Methods:\n",
+    "## Methods:\n",
     "- Explain how you will conduct either your data analysis and which variables/columns you will use. Note - you do not need to use all variables/columns that exist in the raw data set. In fact, that's often not a good idea. For each variable think: is this a useful variable for prediction?\n",
     "- Describe at least one way that you will visualize the results"
    ]
@@ -936,10 +938,14 @@
    "id": "f289a61a-6acf-4b19-b79d-fb153b96130b",
    "metadata": {},
    "source": [
-    "Expected outcomes and significance:\n",
+    "## Expected outcomes and significance:\n",
     "- What do you expect to find?\n",
     "- What impact could such findings have?\n",
-    "- What future questions could this lead to?"
+    "- What future questions could this lead to?\n",
+    "\n",
+    "We expect to find that higher ranking and higher first-serve points will increase the tennis player’s chance of winning the match.\n",
+    "As professional tournament circuits are still expanding, along with many notable and rising players and rivalries in this field, it broadened the appeal of tennis among the public. With statistical analysis for forecasting tennis games, coaches, media and even stakeholders in the betting market are benefitted. For instance, the winning probability of a player calculated by this model can determine whether or not to place a bet, their data can be used for coaches to evaluate a player's performance, and media channels provide more insightful coverage of a sporting tournament. \n",
+    "After analysing the data of the top 500 tennis players in the world, we can further explore whether or not a specific tennis stroke or a strategy is working, then the results may lead to questions about whether the precision of a forehand stroke is higher than a backhand stroke, or which type of training is required to equip a player. These data may help develop a player’s skills and foster their growth with a suitable approach.\n"
    ]
   }
  ],
