--- a/Group_Project_Proposal.ipynb
+++ b/Group_Project_Proposal.ipynb
@@ -13,10 +13,7 @@
    "id": "7d430a64-30d7-4219-82d8-b6833975ae05",
    "metadata": {},
    "source": [
-    "## Introduction:\n",
-    "- Provide some relevant background information on the topic so that someone unfamiliar with it will be prepared to understand the rest of your proposal\n",
-    "- Clearly state the question you will try to answer with your project\n",
-    "- Identify and describe the dataset that will be used to answer the question\n",
+    "## Introduction\n",
     "\n",
     "Our project will answer the predictive question of whether a professional tennis player will win or lose the match. The dataset used to answer the question contains 6867 rows of data from the results of all tennis games for top 500 players from 2017 to 2019. From this dataset, we can determine the tournament’s name, level and date, and also the winners and losers respective age, country, score, serve points, break points, rank, and rank points. By analyzing certain aspects of the data collected from every match, we can find out the relationship between the player’s qualities and the chance of winning. For the age of players, it’s collected at the time the player in the match and marked in decimals. While for the rank, it is the player’s ATP or WTA rank as of the tournament date. However, there are some matches with missing stats, as some of them aren’t recorded, while others were deleted because they didn’t pass the sanity check."
    ]
@@ -26,11 +23,7 @@
    "id": "09086a19-ddba-47c7-8082-31501d4edcbd",
    "metadata": {},
    "source": [
-    "## Preliminary exploratory data analysis:\n",
-    "- Demonstrate that the dataset can be read from the web into R \n",
-    "- Clean and wrangle your data into a tidy format\n",
-    "- Using only training data, summarize the data in at least one table (this is exploratory data analysis). An example of a useful table could be one that reports the number of observations in each class, the means of the predictor variables you plan to use in your analysis and how many rows have missing data.\n",
-    "- Using only training data, visualize the data with at least one plot relevant to the analysis you plan to do (this is exploratory data analysis). An example of a useful visualization could be one that compares the distributions of each of the predictor variables you plan to use in your analysis."
+    "## Preliminary exploratory data analysis"
    ]
   },
   {
@@ -83,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "fc8607af-f58f-4468-a724-1fa87bc08303",
    "metadata": {},
    "outputs": [
@@ -698,7 +691,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
+   "id": "c302031f-ebc9-45d1-801e-615dcffa7278",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 2 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>result</th><th scope=col>count</th><th scope=col>percentage</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>winner</td><td>5077</td><td>50</td></tr>\n",
+       "\t<tr><td>loser </td><td>5077</td><td>50</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 2 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " result & count & percentage\\\\\n",
+       " <fct> & <int> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t winner & 5077 & 50\\\\\n",
+       "\t loser  & 5077 & 50\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 2 × 3\n",
+       "\n",
+       "| result &lt;fct&gt; | count &lt;int&gt; | percentage &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| winner | 5077 | 50 |\n",
+       "| loser  | 5077 | 50 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  result count percentage\n",
+       "1 winner 5077  50        \n",
+       "2 loser  5077  50        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 1 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>average_age</th><th scope=col>average_rank</th><th scope=col>average_first_svpt_won</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>27.53868</td><td>70.4093</td><td>35.9159</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 1 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " average\\_age & average\\_rank & average\\_first\\_svpt\\_won\\\\\n",
+       " <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 27.53868 & 70.4093 & 35.9159\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 1 × 3\n",
+       "\n",
+       "| average_age &lt;dbl&gt; | average_rank &lt;dbl&gt; | average_first_svpt_won &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| 27.53868 | 70.4093 | 35.9159 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  average_age average_rank average_first_svpt_won\n",
+       "1 27.53868    70.4093      35.9159               "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 1 × 1</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>missing_rows</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>0</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 1 × 1\n",
+       "\\begin{tabular}{l}\n",
+       " missing\\_rows\\\\\n",
+       " <int>\\\\\n",
+       "\\hline\n",
+       "\t 0\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 1 × 1\n",
+       "\n",
+       "| missing_rows &lt;int&gt; |\n",
+       "|---|\n",
+       "| 0 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  missing_rows\n",
+       "1 0           "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Summary Tables for Our Dataset\n",
+    "\n",
+    "num_obs <- nrow(atp_train)\n",
+    "\n",
+    "atp_train_results <- atp_train |>\n",
+    "                     group_by(result) |>\n",
+    "                     summarize(count = n(), percentage = n()/num_obs * 100)\n",
+    "\n",
+    "\n",
+    "atp_train_averages <- atp_train |>\n",
+    "                      mutate(average_age = mean(age)) |>\n",
+    "                      mutate(average_rank = mean(rank)) |>\n",
+    "                      mutate(average_first_svpt_won = mean(first_svpt_won)) |>\n",
+    "                      select(average_age, average_rank, average_first_svpt_won) |>\n",
+    "                      slice(1)\n",
+    "\n",
+    "atp_train_missing_rows <- data.frame(missing_rows = sum(is.na(atp_train)))\n",
+    "\n",
+    "\n",
+    "atp_train_results \n",
+    "\n",
+    "atp_train_averages\n",
+    "\n",
+    "atp_train_missing_rows\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "40b7c6c5-3f58-43f6-94dc-20f578e24ec7",
    "metadata": {},
    "outputs": [
@@ -852,7 +1003,7 @@
     }
    ],
    "source": [
-    "# Exploratory Data Analysis - Visualization Code\n",
+    "# Visualization of dataset - Code\n",
     "options(repr.plot.height = 8, repr.plot.width = 8)\n",
     "\n",
     "# Predictor 1 (Age) vs Result\n",
@@ -928,7 +1079,7 @@
    "id": "3b5abd47-1587-4f18-a050-b7ab02b490d8",
    "metadata": {},
    "source": [
-    "## Methods:\n",
+    "## Methods\n",
     "- Explain how you will conduct either your data analysis and which variables/columns you will use. Note - you do not need to use all variables/columns that exist in the raw data set. In fact, that's often not a good idea. For each variable think: is this a useful variable for prediction?\n",
     "- Describe at least one way that you will visualize the results"
    ]
@@ -938,15 +1089,20 @@
    "id": "f289a61a-6acf-4b19-b79d-fb153b96130b",
    "metadata": {},
    "source": [
-    "## Expected outcomes and significance:\n",
-    "- What do you expect to find?\n",
-    "- What impact could such findings have?\n",
-    "- What future questions could this lead to?\n",
+    "## Expected outcomes and significance\n",
     "\n",
     "We expect to find that higher ranking and higher first-serve points will increase the tennis player’s chance of winning the match.\n",
     "As professional tournament circuits are still expanding, along with many notable and rising players and rivalries in this field, it broadened the appeal of tennis among the public. With statistical analysis for forecasting tennis games, coaches, media and even stakeholders in the betting market are benefitted. For instance, the winning probability of a player calculated by this model can determine whether or not to place a bet, their data can be used for coaches to evaluate a player's performance, and media channels provide more insightful coverage of a sporting tournament. \n",
     "After analysing the data of the top 500 tennis players in the world, we can further explore whether or not a specific tennis stroke or a strategy is working, then the results may lead to questions about whether the precision of a forehand stroke is higher than a backhand stroke, or which type of training is required to equip a player. These data may help develop a player’s skills and foster their growth with a suitable approach.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7cc6a38-fa01-4d01-bac4-d5e3ee958708",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
