Updated averages summary table for wins and losses separately
Split the average age, rank, first-serve point won for wins and losses separately using training dataset

--- a/Group_Project_Proposal.ipynb
+++ b/Group_Project_Proposal.ipynb
@@ -14,8 +14,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "\n",
-    "Our project will answer the predictive question of whether a professional tennis player will win or lose the match. The dataset used to answer the question contains 6867 rows of data from the results of all tennis games for top 500 players from 2017 to 2019. From this dataset, we can determine the tournament’s name, level and date, and also the winners and losers respective age, country, score, serve points, break points, rank, and rank points. By analyzing certain aspects of the data collected from every match, we can find out the relationship between the player’s qualities and the chance of winning. For the age of players, it’s collected at the time the player in the match and marked in decimals. While for the rank, it is the player’s ATP or WTA rank as of the tournament date. However, there are some matches with missing stats, as some of them aren’t recorded, while others were deleted because they didn’t pass the sanity check."
+    "\n"
    ]
   },
   {
@@ -691,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "c302031f-ebc9-45d1-801e-615dcffa7278",
    "metadata": {},
    "outputs": [
@@ -743,37 +742,41 @@
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A data.frame: 1 × 3</caption>\n",
+       "<caption>A data.frame: 2 × 4</caption>\n",
        "<thead>\n",
-       "\t<tr><th scope=col>average_age</th><th scope=col>average_rank</th><th scope=col>average_first_svpt_won</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "\t<tr><th scope=col>result</th><th scope=col>average_age</th><th scope=col>average_rank</th><th scope=col>average_first_svpt_won</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>27.53868</td><td>70.4093</td><td>35.9159</td></tr>\n",
+       "\t<tr><td>win </td><td>27.58609</td><td>57.99350</td><td>37.85759</td></tr>\n",
+       "\t<tr><td>lose</td><td>27.49127</td><td>82.82509</td><td>33.97420</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A data.frame: 1 × 3\n",
-       "\\begin{tabular}{lll}\n",
-       " average\\_age & average\\_rank & average\\_first\\_svpt\\_won\\\\\n",
-       " <dbl> & <dbl> & <dbl>\\\\\n",
+       "A data.frame: 2 × 4\n",
+       "\\begin{tabular}{llll}\n",
+       " result & average\\_age & average\\_rank & average\\_first\\_svpt\\_won\\\\\n",
+       " <fct> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t 27.53868 & 70.4093 & 35.9159\\\\\n",
+       "\t win  & 27.58609 & 57.99350 & 37.85759\\\\\n",
+       "\t lose & 27.49127 & 82.82509 & 33.97420\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A data.frame: 1 × 3\n",
+       "A data.frame: 2 × 4\n",
        "\n",
-       "| average_age &lt;dbl&gt; | average_rank &lt;dbl&gt; | average_first_svpt_won &lt;dbl&gt; |\n",
-       "|---|---|---|\n",
-       "| 27.53868 | 70.4093 | 35.9159 |\n",
+       "| result &lt;fct&gt; | average_age &lt;dbl&gt; | average_rank &lt;dbl&gt; | average_first_svpt_won &lt;dbl&gt; |\n",
+       "|---|---|---|---|\n",
+       "| win  | 27.58609 | 57.99350 | 37.85759 |\n",
+       "| lose | 27.49127 | 82.82509 | 33.97420 |\n",
        "\n"
       ],
       "text/plain": [
-       "  average_age average_rank average_first_svpt_won\n",
-       "1 27.53868    70.4093      35.9159               "
+       "  result average_age average_rank average_first_svpt_won\n",
+       "1 win    27.58609    57.99350     37.85759              \n",
+       "2 lose   27.49127    82.82509     33.97420              "
       ]
      },
      "metadata": {},
@@ -821,7 +824,7 @@
     }
    ],
    "source": [
-    "# Summary Tables for Our Dataset\n",
+    "# Summary Tables for Our Dataset - Code\n",
     "\n",
     "num_obs <- nrow(atp_train)\n",
     "\n",
@@ -830,19 +833,31 @@
     "                     summarize(count = n(), percentage = n()/num_obs * 100)\n",
     "\n",
     "\n",
-    "atp_train_averages <- atp_train |>\n",
+    "atp_train_wins <- filter(atp_train, result == \"win\")\n",
+    "atp_train_losses <- filter(atp_train, result == \"lose\")\n",
+    "\n",
+    "atp_train_wins_averages <- atp_train_wins |>\n",
     "                      mutate(average_age = mean(age)) |>\n",
     "                      mutate(average_rank = mean(rank)) |>\n",
     "                      mutate(average_first_svpt_won = mean(first_svpt_won)) |>\n",
-    "                      select(average_age, average_rank, average_first_svpt_won) |>\n",
+    "                      select(result, average_age, average_rank, average_first_svpt_won) |>\n",
     "                      slice(1)\n",
+    "\n",
+    "atp_train_losses_averages <- atp_train_losses |>\n",
+    "                      mutate(average_age = mean(age)) |>\n",
+    "                      mutate(average_rank = mean(rank)) |>\n",
+    "                      mutate(average_first_svpt_won = mean(first_svpt_won)) |>\n",
+    "                      select(result, average_age, average_rank, average_first_svpt_won) |>\n",
+    "                      slice(1)\n",
+    "\n",
+    "atp_train_averages <- rbind(atp_train_wins_averages, atp_train_losses_averages)\n",
     "\n",
     "atp_train_missing_rows <- data.frame(missing_rows = sum(is.na(atp_train)))\n",
     "\n",
     "\n",
     "atp_train_results \n",
     "\n",
-    "atp_train_averages\n",
+    "atp_train_averages \n",
     "\n",
     "atp_train_missing_rows\n"
    ]
@@ -1088,10 +1103,7 @@
    "metadata": {},
    "source": [
     "## Expected outcomes and significance\n",
-    "\n",
-    "We expect to find that higher ranking and higher first-serve points will increase the tennis player’s chance of winning the match.\n",
-    "As professional tournament circuits are still expanding, along with many notable and rising players and rivalries in this field, it broadened the appeal of tennis among the public. With statistical analysis for forecasting tennis games, coaches, media and even stakeholders in the betting market are benefitted. For instance, the winning probability of a player calculated by this model can determine whether or not to place a bet, their data can be used for coaches to evaluate a player's performance, and media channels provide more insightful coverage of a sporting tournament. \n",
-    "After analysing the data of the top 500 tennis players in the world, we can further explore whether or not a specific tennis stroke or a strategy is working, then the results may lead to questions about whether the precision of a forehand stroke is higher than a backhand stroke, or which type of training is required to equip a player. These data may help develop a player’s skills and foster their growth with a suitable approach.\n"
+    "\n"
    ]
   }
  ],
