Changed to read atp_data from web (GitHub)
To meet project proposal requirements

--- a/Group_Project_Proposal.ipynb
+++ b/Group_Project_Proposal.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "id": "533df2bf-3d36-4cfc-b871-556db6e3e712",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "id": "fc8607af-f58f-4468-a724-1fa87bc08303",
    "metadata": {},
    "outputs": [
@@ -628,7 +628,7 @@
     "\n",
     "# Reading and Wrangling Data\n",
     "\n",
-    "atp_data <- read_csv(\"atp2017-2019.csv\") |>\n",
+    "atp_data <- read_csv(\"https://raw.githubusercontent.com/EllaShi7/Group-42-Project-DSCI-100-2022w2/main/atp2017-2019.csv\") |>\n",
     "  select(winner_age, loser_age, winner_rank, loser_rank, w_1stWon, l_1stWon) |> \n",
     "  na.omit()\n",
     "\n",
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "id": "c302031f-ebc9-45d1-801e-615dcffa7278",
    "metadata": {},
    "outputs": [
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "40b7c6c5-3f58-43f6-94dc-20f578e24ec7",
    "metadata": {},
    "outputs": [
