Add Table Title and ref in write up

--- a/Group_Project_Proposal.ipynb
+++ b/Group_Project_Proposal.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "id": "533df2bf-3d36-4cfc-b871-556db6e3e712",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "id": "fc8607af-f58f-4468-a724-1fa87bc08303",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
+   "id": "9d5a9bed-4f5c-42f2-b74a-c8d9a119045e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 2 × 4</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>result</th><th scope=col>average_age</th><th scope=col>average_rank</th><th scope=col>average_first_svpt_won</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>win </td><td>27.58609</td><td>57.99350</td><td>37.85759</td></tr>\n",
+       "\t<tr><td>lose</td><td>27.49127</td><td>82.82509</td><td>33.97420</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 2 × 4\n",
+       "\\begin{tabular}{llll}\n",
+       " result & average\\_age & average\\_rank & average\\_first\\_svpt\\_won\\\\\n",
+       " <fct> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t win  & 27.58609 & 57.99350 & 37.85759\\\\\n",
+       "\t lose & 27.49127 & 82.82509 & 33.97420\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 2 × 4\n",
+       "\n",
+       "| result &lt;fct&gt; | average_age &lt;dbl&gt; | average_rank &lt;dbl&gt; | average_first_svpt_won &lt;dbl&gt; |\n",
+       "|---|---|---|---|\n",
+       "| win  | 27.58609 | 57.99350 | 37.85759 |\n",
+       "| lose | 27.49127 | 82.82509 | 33.97420 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  result average_age average_rank average_first_svpt_won\n",
+       "1 win    27.58609    57.99350     37.85759              \n",
+       "2 lose   27.49127    82.82509     33.97420              "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Table 1: Means of the Predictor Variables by Result\n",
+    "\n",
+    "atp_train_wins <- filter(atp_train, result == \"win\")\n",
+    "atp_train_losses <- filter(atp_train, result == \"lose\")\n",
+    "\n",
+    "atp_train_wins_averages <- atp_train_wins |>\n",
+    "                      mutate(average_age = mean(age)) |>\n",
+    "                      mutate(average_rank = mean(rank)) |>\n",
+    "                      mutate(average_first_svpt_won = mean(first_svpt_won)) |>\n",
+    "                      select(result, average_age, average_rank, average_first_svpt_won) |>\n",
+    "                      slice(1)\n",
+    "\n",
+    "atp_train_losses_averages <- atp_train_losses |>\n",
+    "                      mutate(average_age = mean(age)) |>\n",
+    "                      mutate(average_rank = mean(rank)) |>\n",
+    "                      mutate(average_first_svpt_won = mean(first_svpt_won)) |>\n",
+    "                      select(result, average_age, average_rank, average_first_svpt_won) |>\n",
+    "                      slice(1)\n",
+    "\n",
+    "atp_train_averages <- rbind(atp_train_wins_averages, atp_train_losses_averages)\n",
+    "\n",
+    "atp_train_averages "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "c302031f-ebc9-45d1-801e-615dcffa7278",
    "metadata": {},
    "outputs": [
@@ -704,51 +780,25 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A data.frame: 2 × 4</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>result</th><th scope=col>average_age</th><th scope=col>average_rank</th><th scope=col>average_first_svpt_won</th></tr>\n",
-       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>win </td><td>27.58609</td><td>57.99350</td><td>37.85759</td></tr>\n",
-       "\t<tr><td>lose</td><td>27.49127</td><td>82.82509</td><td>33.97420</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A data.frame: 2 × 4\n",
-       "\\begin{tabular}{llll}\n",
-       " result & average\\_age & average\\_rank & average\\_first\\_svpt\\_won\\\\\n",
-       " <fct> & <dbl> & <dbl> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t win  & 27.58609 & 57.99350 & 37.85759\\\\\n",
-       "\t lose & 27.49127 & 82.82509 & 33.97420\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A data.frame: 2 × 4\n",
-       "\n",
-       "| result &lt;fct&gt; | average_age &lt;dbl&gt; | average_rank &lt;dbl&gt; | average_first_svpt_won &lt;dbl&gt; |\n",
-       "|---|---|---|---|\n",
-       "| win  | 27.58609 | 57.99350 | 37.85759 |\n",
-       "| lose | 27.49127 | 82.82509 | 33.97420 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  result average_age average_rank average_first_svpt_won\n",
-       "1 win    27.58609    57.99350     37.85759              \n",
-       "2 lose   27.49127    82.82509     33.97420              "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "# Table 2: Number of Observations in Each Class\n",
+    "\n",
+    "num_obs <- nrow(atp_train)\n",
+    "\n",
+    "atp_train_results <- atp_train |>\n",
+    "                     group_by(result) |>\n",
+    "                     summarize(count = n(), percentage = n()/num_obs * 100)\n",
+    "atp_train_results \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "41c79a2d-2576-42dc-8b1c-974b377131c9",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -791,47 +841,16 @@
     }
    ],
    "source": [
-    "# Summary Tables for Our Dataset - Code\n",
-    "\n",
-    "num_obs <- nrow(atp_train)\n",
-    "\n",
-    "atp_train_results <- atp_train |>\n",
-    "                     group_by(result) |>\n",
-    "                     summarize(count = n(), percentage = n()/num_obs * 100)\n",
-    "\n",
-    "\n",
-    "atp_train_wins <- filter(atp_train, result == \"win\")\n",
-    "atp_train_losses <- filter(atp_train, result == \"lose\")\n",
-    "\n",
-    "atp_train_wins_averages <- atp_train_wins |>\n",
-    "                      mutate(average_age = mean(age)) |>\n",
-    "                      mutate(average_rank = mean(rank)) |>\n",
-    "                      mutate(average_first_svpt_won = mean(first_svpt_won)) |>\n",
-    "                      select(result, average_age, average_rank, average_first_svpt_won) |>\n",
-    "                      slice(1)\n",
-    "\n",
-    "atp_train_losses_averages <- atp_train_losses |>\n",
-    "                      mutate(average_age = mean(age)) |>\n",
-    "                      mutate(average_rank = mean(rank)) |>\n",
-    "                      mutate(average_first_svpt_won = mean(first_svpt_won)) |>\n",
-    "                      select(result, average_age, average_rank, average_first_svpt_won) |>\n",
-    "                      slice(1)\n",
-    "\n",
-    "atp_train_averages <- rbind(atp_train_wins_averages, atp_train_losses_averages)\n",
+    "# Table 3: Rows of Missing Training Data \n",
     "\n",
     "atp_train_missing_rows <- data.frame(missing_rows = sum(is.na(atp_train)))\n",
     "\n",
-    "\n",
-    "atp_train_results \n",
-    "\n",
-    "atp_train_averages \n",
-    "\n",
-    "atp_train_missing_rows\n"
+    "atp_train_missing_rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "id": "40b7c6c5-3f58-43f6-94dc-20f578e24ec7",
    "metadata": {},
    "outputs": [
@@ -1063,7 +1082,8 @@
    "source": [
     "## Methods\n",
     "\n",
-    "We will use winners’ and losers’ age , rank, and first-serve points won in the match as the variables for prediction. Figure 1a and 1b indicates a reduction of wins for players around 24 to 25 years old, and 29 year old players contribute the most wins. Also, 36.25 to 38 year-old players have double the amount of wins than losses. Figures 2a and 2b show players ranked in the top 25 have a significantly higher number of wins than losses while players ranked from 100 onwards had significantly more losses than wins. From the summary table, the average rank of the winner is also higher than the player that loses. Higher first-serve points won relates to more number of wins than losses, especially after 37 points as in Figure 3a and 3b. Winners of matches also have a higher average first-serve point than losers of the match shown in the summary table. Thus, rank and first-serve points will serve as stronger predictors and the age predictor could help differentiate when the other two predictors have similar values.\n",
+    "We will use winners’ and losers’ age , rank, and first-serve points won in the match as the variables for prediction. Figure 1a and 1b indicates a reduction of wins for players around 24 to 25 years old, and 29 year old players contribute the most wins. Also, 36.25 to 38 year-old players have double the amount of wins than losses. Figures 2a and 2b show players ranked in the top 25 have a significantly higher number of wins than losses while players ranked from 100 onwards had significantly more losses than wins. From Table 1, the average rank of the winner is also higher than the player that loses. Higher first-serve points won relates to more number of wins than losses, especially after 37 points as in Figure 3a and 3b. Winners of matches also have a higher average first-serve point than losers of the match shown Table 1. Thus, rank and first-serve points will serve as stronger predictors and the age predictor could help differentiate when the other two predictors have similar values.\n",
+    "\n",
     "\n",
     "We will conduct our data analysis by building a binary classification model with K-nearest neighbours algorithm using the “tidymodels” R package. Prediction of new observations will be based on a majority vote of the closest neighbouring classes. First, we will set the seed then split the wrangled dataset randomly (but reproducible) to create a training and testing set with strata argument as the categorical label variable “result”. Next, parameter K will be determined through 10-fold cross-validation by splitting the training data into 10 training and validation subsets. Then, we will create a recipe using training data which includes centering and scaling all predictors. Following by creating a KNN model specification with neighbors equal to tune(). To create our data analysis workflow, we add our recipe and model specification and use tune_grid function on the training/validation subsets to estimate our classifier’s accuracy for K values of 1-100. Afterwards, we choose the K value with the highest accuracy estimate by plotting accuracy versus K. Subsequently, we will create a new model specification with the best K value, and retrain our classifier using training data. Finally, we predict the “result” label in the testing set to evaluate the estimated accuracy of our classifier.\n",
     "\n",
