Create outline of Group Project Report

--- a/Group_Project_Proposal.ipynb
+++ b/Group_Project_Proposal.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "markdown",
    "id": "aa284590-4b1c-4885-89e0-edf58bcaff8c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Introduction"
    ]
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "id": "533df2bf-3d36-4cfc-b871-556db6e3e712",
    "metadata": {},
    "outputs": [],
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "id": "fc8607af-f58f-4468-a724-1fa87bc08303",
    "metadata": {},
    "outputs": [
@@ -671,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "id": "9d5a9bed-4f5c-42f2-b74a-c8d9a119045e",
    "metadata": {},
    "outputs": [
@@ -753,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 62,
    "id": "c302031f-ebc9-45d1-801e-615dcffa7278",
    "metadata": {},
    "outputs": [
@@ -821,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 63,
    "id": "41c79a2d-2576-42dc-8b1c-974b377131c9",
    "metadata": {},
    "outputs": [
@@ -874,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 64,
    "id": "40b7c6c5-3f58-43f6-94dc-20f578e24ec7",
    "metadata": {},
    "outputs": [
@@ -1029,6 +1031,7 @@
    ],
    "source": [
     "# Visualization of dataset - Code\n",
+    "\n",
     "options(repr.plot.height = 10, repr.plot.width = 10)\n",
     "\n",
     "# Predictor 1 (Age) vs Result\n",
